--- a/src/components/SearchArea/SearchArea.css
+++ b/src/components/SearchArea/SearchArea.css
@@ -1,8 +1,16 @@
+.pageTitle,
+.searchQuery,
+.crossButton
+.searchButton{
+  font-family: 'Open Sans';
+}
+
 .pageTitle {
   color: #999;
   font-size: 36px;
   font-weight: bold;
   letter-spacing: 4px;
+  font-family: 'Open Sans';
 }
 
 .searchQuery {
@@ -38,5 +46,6 @@
   border-radius: 2px;
   position: relative;
   left: -25px;
-  top: -1px;
+  top:-1px;
+  font-family: 'Open Sans';
 }
