--- a/src/components/ResultsArea/ResultsArea.css
+++ b/src/components/ResultsArea/ResultsArea.css
@@ -2,3 +2,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.beforeSearchMessage {
+  margin-top: 100px;
+  color: #999;
+  font-size: 25px;
+  font-weight: bold;
+}
